# composer

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.in  requirements.txt
composition/: api.py  cmd.py  composer.py  directory.py  install.py  list_apps.py  logs.py  models.py  storage.py  subapps.py  template_cmd.py  uninstall.py
examples/basic_application/: README.md  app.yaml  template.yaml  test.configmap  values.yaml
test/: data.py  test_configmaps.py
